fixed standard crashing bug